@@ -480,7 +480,9 @@ init_resync:
 	   Preserve header_change value from previous runs if it is serious.
 	   If we still have a big change pending, it should be dealt with outside,
 	   fr->header_change set to zero afterwards. */
-	if(fr->header_change < 2)
+	/* If the new header is not possibly a valid MPEG header, there
+	   will not be header change with this one. */
+	if(head_check(newhead) && fr->header_change < 2)
 	{
 		fr->header_change = 2; /* output format change is possible... */
 		if(fr->oldhead)        /* check a following header for change */
@@ -491,20 +493,21 @@ init_resync:
 			   namely: same decoding routines, same amount of decoded data. */
 			if(head_compatible(fr->oldhead, newhead))
 			fr->header_change = 1;
-			else
+			else if(head_check(newhead))
 			{
 				fr->state_flags |= FRAME_FRANKENSTEIN;
 				if(NOQUIET)
 				fprintf(stderr, "\nWarning: Big change (MPEG version, layer, rate). Frankenstein stream?\n");
 			}
 		}
-		else if(head_check(newhead) && fr->firsthead && !head_compatible(fr->firsthead, newhead))
+		else if(fr->firsthead && !head_compatible(fr->firsthead, newhead))
 		{
 			fr->state_flags |= FRAME_FRANKENSTEIN;
 			if(NOQUIET)
 			fprintf(stderr, "\nWarning: Big change from first (MPEG version, layer, rate). Frankenstein stream?\n");
 		}
 	}
+	else debug1("Fall-through for header %08lx.", newhead);
 
 #ifdef SKIP_JUNK
 	if(!fr->firsthead && !head_check(newhead))
